libstream-more-perl (0.7.3) UNRELEASED; urgency=low

  * DiskBuffer: support lag role when moose-based input stream supports it
  * get rid of 'data2' in json formatter
  * RoundRobin: load Format::Human::Bytes - fix 'info' method

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 08 Nov 2011 23:34:35 +0400

libstream-more-perl (0.7.2) unstable; urgency=low

  * Stream::RoundRobin:
   - description role
   - fill with \n instead of \0 initially
  * Stream::Queue:
   - description role
   - order big chunks when reading
   - Stream::Queue::In moosified
  * rewrite Stream::Concat and Stream::Concat::In with Moose
  * Stream::Concat::In propagates lag method
  * more pod everywhere, test pod for moose-based classes

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 10 Oct 2011 18:29:54 +0400

libstream-more-perl (0.7.1) unstable; urgency=low

  * Stream::Moose::Role::Description

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 06 Sep 2011 18:53:09 +0400

libstream-more-perl (0.7.0) unstable; urgency=low

  * lots of Stream::Moose::* roles
  * Stream::RoundRobin storage

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 05 Aug 2011 17:05:22 +0400

libstream-more-perl (0.6.17) unstable; urgency=low

  * DiskBuffer: allow coderef as $in
  * Stream::Queue:
   - always comply to max_chunk_count
   - allow '.' in client names

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 17 May 2011 18:50:18 +0400

libstream-more-perl (0.6.16) unstable; urgency=low

  * Stream::Queue moosified
  * Stream::Queue supports Owned role and automatically switches to read-only
    mode if queue doesn't belong to current user

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 27 Apr 2011 16:49:24 +0400

libstream-more-perl (0.6.15) unstable; urgency=low

  [ Vyacheslav Matjukhin (No comments) ]
  * Stream::Queue, Stream::In::DiskBuffer: performance improvements